# SamplingMiningWorkflowDSL

./: README.md  out.json  pyproject.toml
src/sampling_mining_workflows_dsl/: Workflow.py
src/sampling_mining_workflows_dsl/analysis/: ChiSquareAnalysis.py  CochranTest.py  CochranWorkflowAnalysis.py  CoverageTest.py  DistributionWorkflowAnalysis.py  HistAnalysis.py  HistWorkflowAnalysis.py  KSWorkflowAnalysis.py  kolmogorov_smirnov.py
src/sampling_mining_workflows_dsl/element/: EagerSet.py  Element.py  LazySet.py  Loader.py  Repository.py  Set.py  Writer.py
src/sampling_mining_workflows_dsl/element/loader/: CsvLazyLoader.py  CsvLoader.py  JsonLoader.py  LoaderFactory.py
src/sampling_mining_workflows_dsl/element/writer/: CsvWriter.py  JsonWriter.py  WriterFactory.py
src/sampling_mining_workflows_dsl/exec_visualizer/: WorkflowVisualizer.py
src/sampling_mining_workflows_dsl/github_seart/: loader.py
src/sampling_mining_workflows_dsl/metadata/: MetadataDate.py
src/sampling_mining_workflows_dsl/operator/: Operator.py  OperatorBuilder.py
src/sampling_mining_workflows_dsl/operator/clustering/: GroupingOperator.py
src/sampling_mining_workflows_dsl/operator/selection/filter/: FilterOperator.py
src/sampling_mining_workflows_dsl/operator/selection/sampling/: SamplingOperator.py
src/sampling_mining_workflows_dsl/operator/set_algebra/: ExternalSetOperator.py  InternalSetOperator.py  SetOperator.py
src/sampling_mining_workflows_dsl/operator/set_algebra/external_set_operator/: DifferenceOperator.py  IntersectionOperator.py  UnionOperator.py
src/sampling_mining_workflows_dsl/operator/set_algebra/internal_set_operator/: DifferenceOperator.py  IntersectionOperator.py  UnionOperator.py
src/sampling_mining_workflows_dsl/operator/set_algebra/set_operator/: DifferenceOperator.py  IntersectionOperator.py  UnionOperator.py
src/sampling_mining_workflows_dsl/swh/: SwhGraphApiClient.py  loader.py
src/sampling_mining_workflows_dsl/test/: LazySet_Workflow.py  Workflow_simple.py  input.csv
tests/sampling_mining_workflows_dsl/: input.json  test_eagerset.py  test_lazyset.py  test_workflow_eagerset.py  test_workflow_lazyset.py
(+4 files in other folders)
