[build-system]
requires = ["hatchling", "setuptools>=65.0", "wheel"]
build-backend = "hatchling.build"

[project]
name = "sampling_mining_workflows_dsl"
version = "0.3.0"
description = "A python internal DSL to specify, execute and analyse mining software repositories sampling workflows."
readme = "README.md"
requires-python = ">=3.13"
authors = [
    { name = "Romain Lefeuvre", email = "romain.lefeuvre@inria.fr"},
    { name = "Maiwenn Le Gouaster", email = "maiwenn.le-goasteller@irisa.fr"}
]
dependencies = [
    "python-dateutil>=2.9.0",
    "graphviz>=0.21",
    "matplotlib>=3.10.6",
    "pandas>=2.3.2",
    "scipy>=1.16.2",
    "requests>=2.32.5",
]

[tool.hatch.build.targets.wheel]
packages = ["src/sampling_mining_workflows_dsl"]
source-directories = ["src"]


[tool.ruff.lint]
extend-select = [
    "F",        # Pyflakes rules
    "W",        # PyCodeStyle warnings
    "E",        # PyCodeStyle errors
    "I",        # Sort imports properly
    "UP",       # Warn if certain things can changed due to newer Python versions
    "C4",       # Catch incorrect use of comprehensions, dict, list, etc
    "FA",       # Enforce from __future__ import annotations
    "ISC",      # Good use of string concatenation
    "ICN",      # Use common import conventions
    "RET",      # Good return practices
    "SIM",      # Common simplification rules
    "TID",      # Some good import practices
    "TC",       # Enforce importing certain types in a TYPE_CHECKING block
    "TD",       # Be diligent with TODO comments
]
ignore = [
    "COM812",  # missing-trailing-comma
    "CPY001",  # Missing copyright notice at top of file
    "D100",    # Missing docstring in public module
    "D104",    # Missing docstring in public package
    "D203",    # blank line required before class docstring
    "D211",    # no-blank-line-before-class
    "D213",    # multi-line-summary-second-line
    "EM101",   # raw-string-in-exception
    "FIX002",  # line-contains-todo
    "E501",    # Line too long
    "TD003",   # Missing issue link on todo
]
